2003-07-03  Matthew Vanecek  <mevanecek@yahoo.com>

    * po/POTFILES.in: ran make-gnucash-potfile, to pick up all the
    changes for the Qof migration.

2003-07-02  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/gnc-hbci-transfer.c,
	src/import-export/hbci/dialog-hbcitrans.c: Change HBCI online
	transfer action so that first the gnucash Transaction is created
	and only after that the HBCI connection is started. Necessary for
	later implementation of offline queueing and multi-job execution.

2003-07-01  David Hampton  <hampton@employees.org>

	* src/backend/file/gnc-backend-file.c: New data file should have
	same uid/gidas original file. #105662

	* src/app-utils/gnc-ui-util.[ch]:
	* src/app-utils/gw-app-utils-spec.scm:
	* src/engine/gnc-commodity.[ch]:
	* src/engine/gw-engine-spec.scm:
	Move Finance::Quote related information to live with the rest of
	the commodity related code.

	* src/engine/gnc-engine.h:
	* src/engine/gnc-commodity.[ch]: Convert the price quote source
	data into an object of its own.  Eliminate the old "internal" name
	in favor of the F::Q name.  Dynamically find and add new quote
	sources when the user runs gnucash.

	* src/backend/file/gnc-account-xml-v2.c:
	* src/backend/file/gnc-commodity-xml-v2.c:
	* src/engine/Scrub.c: Ensure backwards compatability of the XML file.

	* src/app-utils/gnc-helpers.c: Update for changes in accessing
	quote source information.
	
	* src/gnome-utils/commodity.glade:
	* src/gnome-utils/dialog-commodity.c: Reorganize the dialog for
	selection price quote information.

	* src/scm/price-quotes.scm: Print debugging info when getting
	stock quotes if gnucash is run with the --debug flag.

2003-06-30  Derek Atkins  <derek@ihtfp.com>

	* macros/acx_pthread.m4: macro to find the pthread library for
	  the particular system
	* configure.in: look for pthread library (now that we actually
	  USE pthreads, even if only for Thread Local Storage).

2003-06-27  David Hampton  <hampton@employees.org>
