@@ -104,16 +104,32 @@
      "gnc-help:gnucash-guide/examples1.html" #f)
    )
   )
- ((N_ "Entering Transactions")
+ ((N_ "Transactions")
   "gnc-help:gnucash-guide/chapter4.html"
-   (((N_ "Overview of Registers")
-     "gnc-help:gnucash-guide/registers1.html" #f)
+   (((N_ "Concepts of Transactions")
+     "gnc-help:gnucash-guide/concept_transactions1.html" #f)
+    ((N_ "The Account Register")
+     "gnc-help:gnucash-guide/registers1.html"
+     (((N_ "Simple Two Account Transaction")
+       "gnc-help:gnucash-guide/registers1.html#registers_twoaccount2" #f)
+      ((N_ "Multi Account Transaction")
+       "gnc-help:gnucash-guide/registers1.html#registers_multiaccount2" #f)
+      ((N_ "Account Register Features")
+       "gnc-help:gnucash-guide/registers1.html#registers_features2" #f)
+      )
+     )
     ((N_ "Choosing a Register Style")
      "gnc-help:gnucash-guide/regstyle1.html" #f)
     ((N_ "Using Entry Shortcuts")
      "gnc-help:gnucash-guide/shortcuts1.html" #f)
     ((N_ "Putting It All Together")
-     "gnc-help:gnucash-guide/puttoget1.html" #f)
+     "gnc-help:gnucash-guide/trans_puttoget1.html"
+     (((N_ "Opening Balances")
+       "gnc-help:gnucash-guide/trans_puttoget1.html#trans_puttoget_open2" #f)
+	   ((N_ "Additional Transaction Examples")
+       "gnc-help:gnucash-guide/trans_puttoget1.html#trans_puttoget_add2" #f)
+     )
+    )
    )
   )
  ((N_ "Starting with Your Checkbook")
